[project]
name = "whlctl"
authors = [ { "name" = "Karim Vergnes", "email" = "me@thesola.io" } ]
license = { "file" = "LICENSE" }
readme = "README.md"
classifiers = [
    'Development Status :: 4 - Beta',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Topic :: Utilities',
    'Topic :: Games/Entertainment :: Simulation',
    'Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)',
]
urls = { "Source" = "https://github.com/Thesola10/whlctl" }
dependencies = [ "docopt" ]
dynamic = [ "version", "description" ]

[build-system]
requires = [ "flit_core>=3.2,<4" ]
build-backend = "flit_core.buildapi"

[project.scripts]
whlctl = "whlctl.cli:main"
